[build-system]
requires = ["scikit-build-core>=0.8.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fontforge"
version = "20230101"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.version = ">=3.5"
cmake.args = [
    "-DENABLE_GUI=OFF",
    "-DENABLE_FONTFORGE_EXTRAS=ON",
    "-DBUILD_SHARED_LIBS=ON",
    "-DENABLE_PYTHON_EXTENSION=ON",
    "-DENABLE_PYTHON_SCRIPTING=ON",
    "-DCMAKE_BUILD_TYPE=Release",
    # "-DPYHOOK_INSTALL_DIR=."
]
wheel.exclude = ["bin", "fontforge.libs", "share"]

[tool.cibuildwheel]
before-all = "uname -a"
build-verbosity = 1
skip = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "*-win32", "*-manylinux_i686"]
test-command = "python -c \"import fontforge; print(fontforge.__version__)\""

